--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "server.src.js",
   "scripts": {
-    "build": "webpack && babel app --out-dir dist",
+    "clean": "rm -rf dist",
+    "build": "npm run build:webpack && npm run build:babel",
+    "build:webpack": "webpack",
+    "build:babel": "npm run clean && babel app --out-dir dist",
+    "prestart": "npm run build",
     "start": "node dist/server/server",
-    "start:dev": "npm build && node server/server.src",
+    "start:dev": "npm run build:webpack -- --hot && node app/server/server.src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -35,22 +39,25 @@
     "redux": "^3.5.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-1": "^6.5.0",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-1": "^6.5.0",
     "colors": "^1.1.2",
     "debug": "^2.6.8",
+    "eslint": "^4.1.0",
+    "eslint-plugin-react": "^7.1.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "nodemon": "^1.11.0",
     "react-hot-loader": "^3.0.0-beta.7",
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.10.2",
+    "webpack-dev-server": "^2.4.1",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-hot-server-middleware": "^0.1.0",
-    "webpack-dev-server": "^2.4.1",
     "webpack-node-externals": "^1.2.0"
   }
 }
